# kata

./: .gitignore  FXI.csv  HelloNumbers.java  Larger.java  README.md  READMEprivate.md  TODO  autorollback.sh  autosearch.py  example_cd.html  helloworld  heor_study_framework.py  hiddenrulesofgame.md  index.md  meta_mock.mkv  plan.md  plot_lift_chart.py  pyproject.toml  requirements.txt  story.md  test_rope  utils.py
algotemplates/: test_maxconsesub_elmnstonger.py
cs61b/: Dog.java  DogLauncher.java  HelloWorld.java  IntList.java  IntNode.java  SLList.java
erlu_variations/: test_105_constructbinarytree.py  test_1293_shortestpathingridwithoutelimination.py  test_200_numberofislands.py  test_305_unionfound_numberofislands.py  test_l1631_bssearch_pathwithminumeffort.py  test_l207_courseschedule_topo.py  test_l300_longestconsecturesequence.py  test_l347_sorting_topkfrequent.py  test_l417_dfs_pacificatlanticflow.py  test_l69_bssearch_sqrtx.py  test_l73.py  test_l997_graph_townjudge.py
fundamentals/: blackjack_fun.py  blackjack_fun_learn.py  calculate_mortgage.py  classic_ruin_problem.py  design_news_feed.md  fundskills.md  hello  stack.py  stack2.py  test_cl_process.py  test_cs_treerecursion_2022_05_11.py  test_people_coin.py  test_primefactor.py  test_primefactor_practice.py  test_rope.py  test_rope_practice.py  test_ruinprob.py  test_stack.py  test_stack_2.py  test_sumnaturals.py  test_sumpi.ml  testeditornavigation.md
goodfriendproblems/: test_l1631_bssearch_pathwithminumeffort.py
interview/: test_20220629_googlezhenti.py  test_2034_stockpricefluctuation.py  (+13 more)
(+219 files in other folders)
