[project]
name = "kata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "tweedie>=0.0.9",
    "mlflow>=2.0.0",
    "openai>=1.0.0",
    "pandas>=1.5.0",
    "tiktoken>=0.5.0",
]
